force-app/main/default/objects/Prix_contrat_PDE__c/Prix_contrat_PDE__c.object-meta.xml
<CustomObject>
    <label>Prix contrat PDE</label>
    <nameField>
        <label>Nom de Prix contrat PDE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prix contrat PDE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>