force-app/main/default/objects/Prix_contrat_PDE__c/fields/Abonnement_Mois__c.field-meta.xml
<CustomField>
    <fullName>Abonnement_Mois__c</fullName>
    <label>Abonnement (€/Mois)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>