force-app/main/default/objects/Prix_contrat_PDE__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <formula>Point_energie__r.Adresse_de_consommation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse</label>
    <type>Text</type>
</CustomField>