force-app/main/default/objects/Prix_contrat_PDE__c/fields/Budget_gaz_naturel_HTVA_an__c.field-meta.xml
<CustomField>
    <fullName>Budget_gaz_naturel_HTVA_an__c</fullName>
    <label>Budget gaz naturel HTVA (€/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>