force-app/main/default/objects/Prix_contrat_PDE__c/fields/Capacit_Base_Mwh__c.field-meta.xml
<CustomField>
    <fullName>Capacit_Base_Mwh__c</fullName>
    <label>Capacité Base (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>