force-app/main/default/objects/Prix_contrat_PDE__c/fields/Capacite_HC_Mwh__c.field-meta.xml
<CustomField>
    <fullName>Capacite_HC_Mwh__c</fullName>
    <label>Capacité HC (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>