force-app/main/default/objects/Prix_contrat_PDE__c/fields/Capacite_HCH_Mwh__c.field-meta.xml
<CustomField>
    <fullName>Capacite_HCH_Mwh__c</fullName>
    <label>Capacité HCH (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>