force-app/main/default/objects/Prix_contrat_PDE__c/fields/CAR__c.field-meta.xml
<CustomField>
    <fullName>CAR__c</fullName>
    <label>CAR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>