force-app/main/default/objects/Prix_contrat_PDE__c/fields/CEE_Mwh__c.field-meta.xml
<CustomField>
    <fullName>CEE_Mwh__c</fullName>
    <label>CEE (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>