force-app/main/default/objects/Prix_contrat_PDE__c/fields/Conso_HCE__c.field-meta.xml
<CustomField>
    <fullName>Conso_HCE__c</fullName>
    <label>Conso HCE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>