force-app/main/default/objects/Prix_contrat_PDE__c/fields/Conso_Pointe__c.field-meta.xml
<CustomField>
    <fullName>Conso_Pointe__c</fullName>
    <label>Conso Pointe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>