force-app/main/default/objects/Prix_contrat_PDE__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Prix contrat PDE</relationshipLabel>
    <relationshipName>Prix_contrat_PDE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>