force-app/main/default/objects/Prix_contrat_PDE__c/fields/CSPE__c.field-meta.xml
<CustomField>
    <fullName>CSPE__c</fullName>
    <label>CSPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>