force-app/main/default/objects/Prix_contrat_PDE__c/fields/Date_debut_fourniture__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_fourniture__c</fullName>
    <label>Date de début de fourniture</label>
    <required>true</required>
    <type>Date</type>
</CustomField>