force-app/main/default/objects/Prix_contrat_PDE__c/fields/Frais_distribution_transport_Mwh__c.field-meta.xml
<CustomField>
    <fullName>Frais_distribution_transport_Mwh__c</fullName>
    <label>Frais de distrib et de transport (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>