force-app/main/default/objects/Prix_contrat_PDE__c/fields/FTA__c.field-meta.xml
<CustomField>
    <fullName>FTA__c</fullName>
    <label>FTA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT &lt;= 36 kVA - CU</fullName>
            </value>
            <value>
                <fullName>BT &lt;= 36 kVA - MU</fullName>
            </value>
            <value>
                <fullName>BT &gt; 36 kVA - CU</fullName>
            </value>
            <value>
                <fullName>BT &gt; 36 kVA - LU</fullName>
            </value>
            <value>
                <fullName>HTA - PF - CU</fullName>
            </value>
            <value>
                <fullName>HTA - PF - LU</fullName>
            </value>
            <value>
                <fullName>HTA - PM - CU</fullName>
            </value>
            <value>
                <fullName>HTA - PM - LU</fullName>
            </value>
            <value>
                <fullName>BT &lt;= 36Kva - CU 4 postes</fullName>
            </value>
            <value>
                <fullName>BT &lt;= 36Kva - MU 4 postes</fullName>
            </value>
            <value>
                <fullName>BT &lt;= 36 kVA - LU EP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>