force-app/main/default/objects/Prix_contrat_PDE__c/fields/Numero_compteur__c.field-meta.xml
<CustomField>
    <fullName>Numero_compteur__c</fullName>
    <label>Numéro de compteur</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>