force-app/main/default/objects/Prix_contrat_PDE__c/fields/Point_energie__c.field-meta.xml
<CustomField>
    <fullName>Point_energie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Point d&apos;énergie</label>
    <referenceTo>PDE__c</referenceTo>
    <relationshipLabel>Prix contrat PDE</relationshipLabel>
    <relationshipName>Prix_contrat_PDE</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>