force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_HC__c.field-meta.xml
<CustomField>
    <fullName>Prix_HC__c</fullName>
    <label>Prix HC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>