force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_HCE__c.field-meta.xml
<CustomField>
    <fullName>Prix_HCE__c</fullName>
    <label>Prix HCE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>