force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_HPE__c.field-meta.xml
<CustomField>
    <fullName>Prix_HPE__c</fullName>
    <label>Prix HPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>