force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_HPH__c.field-meta.xml
<CustomField>
    <fullName>Prix_HPH__c</fullName>
    <label>Prix HPH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>