force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_molecule_Mwh__c.field-meta.xml
<CustomField>
    <fullName>Prix_molecule_Mwh__c</fullName>
    <label>Prix molécule (€/Mwh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>