force-app/main/default/objects/Prix_contrat_PDE__c/fields/Prix_Pointe__c.field-meta.xml
<CustomField>
    <fullName>Prix_Pointe__c</fullName>
    <label>Prix Pointe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>