force-app/main/default/objects/Prix_contrat_PDE__c/fields/Profil__c.field-meta.xml
<CustomField>
    <fullName>Profil__c</fullName>
    <label>Profil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P011</fullName>
            </value>
            <value>
                <fullName>P012</fullName>
            </value>
            <value>
                <fullName>P013</fullName>
            </value>
            <value>
                <fullName>P014</fullName>
            </value>
            <value>
                <fullName>P015</fullName>
            </value>
            <value>
                <fullName>P016</fullName>
            </value>
            <value>
                <fullName>P017</fullName>
            </value>
            <value>
                <fullName>P018</fullName>
            </value>
            <value>
                <fullName>P019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>