force-app/main/default/objects/Prix_contrat_PDE__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>