force-app/main/default/objects/Prix_contrat_PDE__c/fields/TICGN__c.field-meta.xml
<CustomField>
    <fullName>TICGN__c</fullName>
    <label>TICGN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>