force-app/main/default/objects/Prix_contrat_PDE__c/recordTypes/Elec.recordType-meta.xml
<RecordType>
    <fullName>Elec</fullName>
    <active>true</active>
    <label>Elec</label>
</RecordType>