force-app/main/default/objects/Prix_contrat_PDE__c/recordTypes/Gaz.recordType-meta.xml
<RecordType>
    <fullName>Gaz</fullName>
    <active>true</active>
    <label>Gaz</label>
</RecordType>